<resources>
    //App name
    <string name="app_name">• EventList</string>

    //Fragment - Login
    <string name="lbl_WelcomeBack">Welcome back!</string>
    <string name="lbl_LoginAccount">Login to your account</string>
    <string name="hint_Email">Email</string>
    <string name="hint_Password">Password</string>
    <string name="lbl_ForgotPassword">Forgot your password?</string>
    <string name="btn_SignIn">Sign in</string>
    <string name="lbl_SignWith">- Or sign in with -</string>
    <string name="lbl_DontHaveAccount">Don\'t have an account?</string>
    <string name="lbl_SignIn">Sign up</string>

    //Fragment - ForgotYourPassword
    <string name="lbl_ForgotYourPasswordQuestion">Forgot your password?</string>
    <string name="lbl_EnterYourEmail">Enter your email, we will send you a new password</string>
    <string name="btn_SendEmail">Send</string>

    //Activity Home
    <string name="lbl_DaysUntil">Days Until</string>
    <string name="lbl_DaysSince">Days Since</string>
    <string name="lbl_...">…</string>
    <string name="lbl_plus">+</string>

    //Fragment - DaysUntilFragment
    <string name="lbl_title_DaysUntil">Days Until</string>

    //Fragment - DaysSinceFragment
    <string name="lbl_title_DaysSince">Days Since</string>

    //Fragment - Register
    <string name="lbl_RegisterAccount">Create your account</string>
    <string name="hint_ConfirmPassword">Confirm password</string>
    <string name="btn_Register">Register</string>
    <string name="lbl_SignUpWith">Or sign up with</string>
    <string name="lbl_LetsGetStarted">Let\'s get started!</string>
    <string name="lbl_CreateAccount">Create an account to get all the features</string>

    //Activity - New event
    <string name="lbl_NewEvent">New event</string>
    <string name="btn_Cancel">Cancel</string>
    <string name="hint_Name">* Name</string>
    <string name="hint_Description">Description</string>
    <string name="hint_Date">* Date</string>
    <string name="hint_Icon">Icon</string>
    <string name="btn_Add">Add</string>

    //Activity - InformationView
    <string name="btn_InformationApp">App information</string>
    <string name="btn_Trash">Trash</string>
    <string name="btn_Contact">Contact</string>
    <string name="btn_ImportExportBackup">Import / Export backup</string>
    <string name="btn_DeleteAccount">Delete account</string>
    <string name="btn_LogOut">Log out</string>
    <string name="lbl_Switch">Notification</string>

    //Fragment
    <string name="btn_ExportData">Backup</string>
    <string name="btn_ImportData">Restore</string>

    //CardView
    <string name="lbl_TitleEvent">Title of the event</string>
    <string name="lbl_Date">Date created - Time elapsed</string>
    <string name="lbl_Time_Different">Time different</string>

    //Activity - EditEvent
    <string name="lbl_Title_EditEvent">Edit event</string>
    <string name="lbl_btn_SaveChanges">Save changes</string>
    <string name="lbl_btn_DeleteEvent">Delete event</string>

    //Fragment - DialogDeleteEventFragmentView
    <string name="lbl_Title_Question_Delete_Event">¿Estas seguro de que quieres eliminar el evento?</string>
    <string name="lbl_Delete_Event_Confirm">Confirmar</string>
    <string name="lbl_Delete_Event_Cancel">Cancelar</string>

    //Fragment-EmptyEvents
    <string name="lbl_NoEvents">No events!</string>
    <string name="lbl_StartByAddingSome">Start by adding some</string>
    <string name="btn_AddEvent">Add event</string>

    //Fragment-DialogDeleteEvent
    <string name="lbl_DeleteEvent">Are you sure you are eliminating the event?</string>
    <string name="btn_Delete">Delete</string>

    //Fragment-Contact
    <string name="lbl_By">by</string>
    <string name="lbl_DescContact1">Hola! Mi nombre es Daniel Andrés Bacho, soy el creador de EventList.</string>
    <string name="lbl_DescContact2">Esta App la he desarrollado como proyecto personal, para poder demostrar mi conocimiento.</string>
    <string name="lbl_DescContact3">Si quieres contactar conmigo o dejarme algun tipo de sugerencia para mejorar, puedes encontrarme en las siguientes redes sociales.</string>
    <string name="lbl_DescContact4">Muchas gracias!</string>
</resources>