<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragments.MenuInformationView">

    <Button
        android:visibility="gone"
        android:id="@+id/btnAppInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/black"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:elevation="10dp"
        android:fontFamily="@font/montserratbold"
        android:padding="16dp"
        android:text="@string/btn_InformationApp"
        android:textAlignment="textStart"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnSuggestionBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corners"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:padding="16dp"
        android:text="@string/btn_Trash"
        android:textAlignment="textStart"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/black"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:elevation="10dp"
        android:fontFamily="@font/montserratbold"
        android:padding="16dp"
        android:text="@string/btn_Contact"
        android:textAlignment="textStart"
        android:textColor="@color/white" />
</LinearLayout>