<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.danieland.eventlist.view.fragments.ContactView">

    <!--ContainerParent-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--ContainerTitle-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/containerParent"
            app:layout_constraintStart_toStartOf="@id/containerParent"
            app:layout_constraintTop_toTopOf="@id/containerParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@id/containerTitle"
                app:layout_constraintEnd_toEndOf="@id/containerTitle"
                app:layout_constraintTop_toTopOf="@id/containerTitle">

                <TextView
                    android:padding="4sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserratbold"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserratregular"
                    android:padding="4dp"
                    android:text="@string/lbl_By"
                    android:textColor="@color/black" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/foto_perfil"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--ContainerText-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/containerParent"
            app:layout_constraintStart_toStartOf="@+id/containerParent"
            app:layout_constraintTop_toBottomOf="@+id/containerTitle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratregular"
                android:paddingTop="8dp"
                android:text="@string/lbl_DescContact1"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratregular"
                android:paddingTop="8dp"
                android:text="@string/lbl_DescContact2"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratregular"
                android:paddingTop="8dp"
                android:text="@string/lbl_DescContact3"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratregular"
                android:paddingTop="8dp"
                android:text="@string/lbl_DescContact4"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!--ContainerButtonLinks-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="16dp">

                <ImageButton
                    android:id="@+id/btnGitHub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:paddingEnd="16dp"
                    android:src="@drawable/icon_github" />

                <ImageButton
                    android:id="@+id/btnLinkedin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:src="@drawable/icon_linkedin" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>